@@ -18,6 +18,16 @@
     <widget class="ItemView" name="view"/>
    </item>
    <item>
+    <widget class="StatusLabel" name="infoLabel">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="hlayout">
      <property name="margin">
       <number>0</number>
@@ -25,23 +35,6 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QLabel" name="infoIcon"/>
-       </item>
-       <item>
-        <widget class="SqueezedTextLabel" name="infoLabel">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
      <item>
       <widget class="GenreCombo" name="genreCombo"/>
      </item>
@@ -67,9 +60,9 @@
    <header>genrecombo.h</header>
   </customwidget>
   <customwidget>
-   <class>SqueezedTextLabel</class>
+   <class>StatusLabel</class>
    <extends>QLabel</extends>
-   <header>squeezedtextlabel.h</header>
+   <header>statuslabel.h</header>
   </customwidget>
   <customwidget>
    <class>MenuButton</class>
